--- a/app_xc1_firmware/Makefile
+++ b/app_xc1_firmware/Makefile
@@ -13,7 +13,8 @@ EXCLUDE_FILES =
 
 USED_MODULES = module_can
 
-include $(BASE_DIR)/../module_xmos_common/build/Makefile.common
+-include ../module_xcommon/build/Makefile.common
+-include ../../xcore_common/module_xcommon/build/Makefile.common
 
 all: $(BIN_DIR)/xc1_firmware.xe
 	@echo Build complete
