changed for xmos_can

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>xcore_can</name>
+	<name>xmos_can</name>
 	<comment></comment>
 	<projects>
 	</projects>
