rewrite of can module

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,5 @@
-SPHINX_PROJECT_NAME=CAN Component
-VERSION=1v0
+SPHINX_PROJECT_NAME=CAN Bus Component
+VERSION=1.0
 DOXYGEN_DIRS=../../sc_can/module_can
 SOURCE_INCLUDE_DIRS=../../sc_can
-XDOC_DIR ?= ../../xdoc
 include $(XDOC_DIR)/Makefile.inc
