--- a/app_can_demo/Makefile
+++ b/app_can_demo/Makefile
@@ -1,28 +1,27 @@
 # The TARGET variable determines what target system the application is
 # compiled for. It either refers to an XN file in the source directories
-# or a valid argument for the --target option when compiling.
-
-TARGET = XC-1
+# or a valid argument for the --target option when compiling
+TARGET = SLICEKIT-L2
 
 # The APP_NAME variable determines the name of the final .xe file. It should
 # not include the .xe postfix. If left blank the name will default to
 # the project name
+APP_NAME = app_can_demo
 
-APP_NAME =
+# The USED_MODULES variable lists other module used by the application.
+USED_MODULES = module_can module_slicekit_support
 
 # The flags passed to xcc when building the application
 # You can also set the following to override flags for a particular language:
-#
-#    XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
-#
+# XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
+XCC_FLAGS_Debug = -g -O3 -fxscope
+XCC_FLAGS_Release = -g -O3 -Wcodes -Xmapper -Wcodes
 
-XCC_FLAGS = -O3
+# The VERBOSE variable, if set to 1, enables verbose output from the make system.
+VERBOSE = 0
 
-# The USED_MODULES variable lists other module used by the application.
-
-USED_MODULES = module_can
 
 #=============================================================================
 # The following part of the Makefile includes the common build infrastructure
