small updates before adding can_rx_frame

--- a/app_can_demo/.project
+++ b/app_can_demo/.project
@@ -61,7 +61,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.environment</key>
-					<value>XTA_ENABLED=false|</value>
+					<value>XTA_ENABLED=true|</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.fullBuildTarget</key>
