--- a/app_can_demo/.settings/org.eclipse.cdt.core.prefs
+++ b/app_can_demo/.settings/org.eclipse.cdt.core.prefs
@@ -1,12 +1,12 @@
-#Mon Jan 28 15:59:36 GMT 2013
+#Mon Feb 04 09:47:20 GMT 2013
 eclipse.preferences.version=1
 environment/project/com.xmos.cdt.toolchain.1047975752/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.1047975752/XMOS_MODULE_PATH/operation=append
-environment/project/com.xmos.cdt.toolchain.1047975752/XMOS_MODULE_PATH/value=/home/andrew/can_workspace/app_can_arbitrate\:/home/andrew/can_workspace/app_can_error_inject\:/home/andrew/can_workspace/app_can_osc\:/home/andrew/can_workspace/crc_test
+environment/project/com.xmos.cdt.toolchain.1047975752/XMOS_MODULE_PATH/value=
 environment/project/com.xmos.cdt.toolchain.1047975752/append=true
 environment/project/com.xmos.cdt.toolchain.1047975752/appendContributed=true
 environment/project/com.xmos.cdt.toolchain.1380938506/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.1380938506/XMOS_MODULE_PATH/operation=append
-environment/project/com.xmos.cdt.toolchain.1380938506/XMOS_MODULE_PATH/value=/home/andrew/can_workspace/app_can_arbitrate\:/home/andrew/can_workspace/app_can_error_inject\:/home/andrew/can_workspace/app_can_osc\:/home/andrew/can_workspace/crc_test
+environment/project/com.xmos.cdt.toolchain.1380938506/XMOS_MODULE_PATH/value=
 environment/project/com.xmos.cdt.toolchain.1380938506/append=true
 environment/project/com.xmos.cdt.toolchain.1380938506/appendContributed=true
