--- a/app_can_demo/Makefile
+++ b/app_can_demo/Makefile
@@ -9,7 +9,7 @@ TARGET = SLICEKIT-L2
 APP_NAME = app_can_demo
 
 # The USED_MODULES variable lists other module used by the application.
-USED_MODULES = module_can module_slicekit_support
+USED_MODULES = module_can module_mutual_thread_comm module_slicekit_support
 
 # The flags passed to xcc when building the application
 # You can also set the following to override flags for a particular language:
