--- a/module_can/.settings/org.eclipse.cdt.core.prefs
+++ b/module_can/.settings/org.eclipse.cdt.core.prefs
@@ -1,7 +1,7 @@
-#Fri Jan 18 09:56:09 GMT 2013
+#Mon Feb 04 11:01:49 GMT 2013
 eclipse.preferences.version=1
 environment/project/com.xmos.cdt.toolchain.326425857/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.326425857/XMOS_MODULE_PATH/operation=append
-environment/project/com.xmos.cdt.toolchain.326425857/XMOS_MODULE_PATH/value=/home/andrew/can_workspace/crc_test
+environment/project/com.xmos.cdt.toolchain.326425857/XMOS_MODULE_PATH/value=/home/andrew/sc_otp/app_print_board_info\:/home/andrew/sw_avb/app_simple_avb_demo\:/home/andrew/sw_avb/module_avb\:/home/andrew/sw_avb/module_avb_1722\:/home/andrew/sw_avb/module_avb_1722_1\:/home/andrew/sw_avb/module_avb_1722_maap\:/home/andrew/sw_avb/module_avb_1722a\:/home/andrew/sw_avb/module_avb_audio\:/home/andrew/sw_avb/module_avb_media_clock\:/home/andrew/sw_avb/module_avb_srp\:/home/andrew/sw_avb/module_avb_util\:/home/andrew/sc_ethernet/module_ethernet\:/home/andrew/sc_ethernet/module_ethernet_board_support\:/home/andrew/sc_ethernet/module_ethernet_smi\:/home/andrew/sw_avb/module_gptp\:/home/andrew/sc_ethernet/module_locks\:/home/andrew/sc_otp/module_otp_board_info
 environment/project/com.xmos.cdt.toolchain.326425857/append=true
 environment/project/com.xmos.cdt.toolchain.326425857/appendContributed=true
