--- a/app_can_error_inject/.cproject
+++ b/app_can_error_inject/.cproject
@@ -159,6 +159,8 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/gcc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1135482130" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -271,6 +273,8 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/gcc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.940722911" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -389,6 +393,8 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/c++/4.2.1/xcore-xmos-elf&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.1224139373" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
@@ -577,6 +583,8 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/gcc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1956519367" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -689,6 +697,8 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/gcc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.37610394" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -807,6 +817,8 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/c++/4.2.1/xcore-xmos-elf&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.319765464" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
