--- a/app_can_demo/.cproject
+++ b/app_can_demo/.cproject
@@ -101,7 +101,7 @@
 					<folderInfo id="com.xmos.cdt.toolchain.1380938506.663233776" name="/" resourcePath="">
 						<toolChain id="com.xmos.cdt.toolchain.1135950982" name="com.xmos.cdt.toolchain" superClass="com.xmos.cdt.toolchain">
 							<targetPlatform archList="all" binaryParser="com.xmos.cdt.core.XEBinaryParser" id="com.xmos.cdt.core.platform.1861136651" isAbstract="false" osList="linux,win32,macosx" superClass="com.xmos.cdt.core.platform"/>
-							<builder appendEnvironment="true" arguments="CONFIG=Debug -B" environment="XTA_ENABLED=true|" id="com.xmos.cdt.builder.base.1178891809" incrementalBuildTarget="" keepEnvironmentInBuildfile="false" managedBuildOn="false" superClass="com.xmos.cdt.builder.base">
+							<builder appendEnvironment="true" arguments="CONFIG=Debug" environment="XTA_ENABLED=true|" id="com.xmos.cdt.builder.base.1178891809" incrementalBuildTarget="" keepEnvironmentInBuildfile="false" managedBuildOn="false" superClass="com.xmos.cdt.builder.base">
 								<outputEntries>
 									<entry flags="VALUE_WORKSPACE_PATH" kind="outputPath" name="bin/Debug"/>
 								</outputEntries>
