--- a/app_can_osc/.cproject
+++ b/app_can_osc/.cproject
@@ -160,6 +160,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.854942916" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -273,6 +275,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1446725292" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -392,6 +396,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.1589428297" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
@@ -581,6 +587,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1243136513" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -694,6 +702,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1659719392" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -813,6 +823,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_can}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/module_mutual_thread_comm}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.1847018753" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
