--- a/app_can_osc/.settings/org.eclipse.cdt.core.prefs
+++ b/app_can_osc/.settings/org.eclipse.cdt.core.prefs
@@ -1,12 +1,12 @@
-#Wed Jan 30 12:34:21 GMT 2013
+#Wed Feb 06 13:52:56 GMT 2013
 eclipse.preferences.version=1
 environment/project/com.xmos.cdt.toolchain.1033664486/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.1033664486/XMOS_MODULE_PATH/operation=append
-environment/project/com.xmos.cdt.toolchain.1033664486/XMOS_MODULE_PATH/value=/home/andrew/sc_can/app_can_demo\:/home/andrew/sc_can/app_can_relay\:/home/andrew/sc_can/module_can
+environment/project/com.xmos.cdt.toolchain.1033664486/XMOS_MODULE_PATH/value=
 environment/project/com.xmos.cdt.toolchain.1033664486/append=true
 environment/project/com.xmos.cdt.toolchain.1033664486/appendContributed=true
 environment/project/com.xmos.cdt.toolchain.878936138/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.878936138/XMOS_MODULE_PATH/operation=append
-environment/project/com.xmos.cdt.toolchain.878936138/XMOS_MODULE_PATH/value=/home/andrew/sc_can/app_can_demo\:/home/andrew/sc_can/app_can_relay\:/home/andrew/sc_can/module_can
+environment/project/com.xmos.cdt.toolchain.878936138/XMOS_MODULE_PATH/value=
 environment/project/com.xmos.cdt.toolchain.878936138/append=true
 environment/project/com.xmos.cdt.toolchain.878936138/appendContributed=true
