--- a/app_can_osc/.project
+++ b/app_can_osc/.project
@@ -6,12 +6,22 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>com.xmos.cdt.core.IncludePathBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>com.xmos.cdt.core.ModulePathBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
 			<triggers>clean,full,incremental,</triggers>
 			<arguments>
 				<dictionary>
 					<key>?children?</key>
-					<value>?name?=outputEntries\|?children?=?name?=entry\\\\\\\|\\\|\||</value>
+					<value>?name?=outputEntries\|?children?=?name?=entry\\\\|\\|\||</value>
 				</dictionary>
 				<dictionary>
 					<key>?name?</key>
@@ -73,3 +83,4 @@
 		<nature>com.xmos.cdt.core.XdeProjectNature</nature>
 	</natures>
 </projectDescription>
+
