--- a/app_can_demo/.settings/org.eclipse.cdt.core.prefs
+++ b/app_can_demo/.settings/org.eclipse.cdt.core.prefs
@@ -1,4 +1,4 @@
-#Thu Feb 21 09:27:51 GMT 2013
+#Mon Oct 21 14:47:33 BST 2013
 eclipse.preferences.version=1
 environment/project/com.xmos.cdt.toolchain.1047975752/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.1047975752/XMOS_MODULE_PATH/operation=append
@@ -12,11 +12,11 @@ environment/project/com.xmos.cdt.toolchain.1380938506/append=true
 environment/project/com.xmos.cdt.toolchain.1380938506/appendContributed=true
 environment/project/com.xmos.cdt.toolchain.18554383/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.18554383/XMOS_MODULE_PATH/operation=append
-environment/project/com.xmos.cdt.toolchain.18554383/XMOS_MODULE_PATH/value=
+environment/project/com.xmos.cdt.toolchain.18554383/XMOS_MODULE_PATH/value=/home/andrew/bug_fixing/sc_lcd/app_lcd_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_benchmark\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_mfg_tests\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_regress\:/home/andrew/bug_fixing/sc_lcd/app_touch_controller_lib_demo\:/home/andrew/bug_fixing/sc_lcd/module_lcd\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram_memory_mapper\:/home/andrew/bug_fixing/sc_lcd/module_text_display\:/home/andrew/bug_fixing/sc_lcd/module_touch_controller_lib
 environment/project/com.xmos.cdt.toolchain.18554383/append=true
 environment/project/com.xmos.cdt.toolchain.18554383/appendContributed=true
 environment/project/com.xmos.cdt.toolchain.95519801/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.95519801/XMOS_MODULE_PATH/operation=append
-environment/project/com.xmos.cdt.toolchain.95519801/XMOS_MODULE_PATH/value=
+environment/project/com.xmos.cdt.toolchain.95519801/XMOS_MODULE_PATH/value=/home/andrew/bug_fixing/sc_lcd/app_lcd_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_benchmark\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_mfg_tests\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_regress\:/home/andrew/bug_fixing/sc_lcd/app_touch_controller_lib_demo\:/home/andrew/bug_fixing/sc_lcd/module_lcd\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram_memory_mapper\:/home/andrew/bug_fixing/sc_lcd/module_text_display\:/home/andrew/bug_fixing/sc_lcd/module_touch_controller_lib
 environment/project/com.xmos.cdt.toolchain.95519801/append=true
 environment/project/com.xmos.cdt.toolchain.95519801/appendContributed=true
