--- a/app_can_dummy_demo/.settings/org.eclipse.cdt.core.prefs
+++ b/app_can_dummy_demo/.settings/org.eclipse.cdt.core.prefs
@@ -1,12 +1,22 @@
-#Mon Feb 04 09:47:20 GMT 2013
+#Mon Oct 21 14:52:03 BST 2013
 eclipse.preferences.version=1
 environment/project/com.xmos.cdt.toolchain.1047975752/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.1047975752/XMOS_MODULE_PATH/operation=append
 environment/project/com.xmos.cdt.toolchain.1047975752/XMOS_MODULE_PATH/value=
 environment/project/com.xmos.cdt.toolchain.1047975752/append=true
 environment/project/com.xmos.cdt.toolchain.1047975752/appendContributed=true
+environment/project/com.xmos.cdt.toolchain.12198991/XMOS_MODULE_PATH/delimiter=\:
+environment/project/com.xmos.cdt.toolchain.12198991/XMOS_MODULE_PATH/operation=append
+environment/project/com.xmos.cdt.toolchain.12198991/XMOS_MODULE_PATH/value=/home/andrew/bug_fixing/sc_lcd/app_lcd_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_benchmark\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_mfg_tests\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_regress\:/home/andrew/bug_fixing/sc_lcd/app_touch_controller_lib_demo\:/home/andrew/bug_fixing/sc_lcd/module_lcd\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram_memory_mapper\:/home/andrew/bug_fixing/sc_lcd/module_text_display\:/home/andrew/bug_fixing/sc_lcd/module_touch_controller_lib
+environment/project/com.xmos.cdt.toolchain.12198991/append=true
+environment/project/com.xmos.cdt.toolchain.12198991/appendContributed=true
 environment/project/com.xmos.cdt.toolchain.1380938506/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.1380938506/XMOS_MODULE_PATH/operation=append
 environment/project/com.xmos.cdt.toolchain.1380938506/XMOS_MODULE_PATH/value=
 environment/project/com.xmos.cdt.toolchain.1380938506/append=true
 environment/project/com.xmos.cdt.toolchain.1380938506/appendContributed=true
+environment/project/com.xmos.cdt.toolchain.32380996/XMOS_MODULE_PATH/delimiter=\:
+environment/project/com.xmos.cdt.toolchain.32380996/XMOS_MODULE_PATH/operation=append
+environment/project/com.xmos.cdt.toolchain.32380996/XMOS_MODULE_PATH/value=/home/andrew/bug_fixing/sc_lcd/app_lcd_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_benchmark\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_mfg_tests\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_regress\:/home/andrew/bug_fixing/sc_lcd/app_touch_controller_lib_demo\:/home/andrew/bug_fixing/sc_lcd/module_lcd\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram_memory_mapper\:/home/andrew/bug_fixing/sc_lcd/module_text_display\:/home/andrew/bug_fixing/sc_lcd/module_touch_controller_lib
+environment/project/com.xmos.cdt.toolchain.32380996/append=true
+environment/project/com.xmos.cdt.toolchain.32380996/appendContributed=true
