--- a/app_can_error_inject/.settings/org.eclipse.cdt.core.prefs
+++ b/app_can_error_inject/.settings/org.eclipse.cdt.core.prefs
@@ -1,4 +1,4 @@
-#Wed Feb 06 14:07:46 GMT 2013
+#Mon Oct 21 14:52:07 BST 2013
 eclipse.preferences.version=1
 environment/project/com.xmos.cdt.toolchain.283335968/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.283335968/XMOS_MODULE_PATH/operation=append
@@ -10,3 +10,13 @@ environment/project/com.xmos.cdt.toolchain.499846513/XMOS_MODULE_PATH/operation=
 environment/project/com.xmos.cdt.toolchain.499846513/XMOS_MODULE_PATH/value=
 environment/project/com.xmos.cdt.toolchain.499846513/append=true
 environment/project/com.xmos.cdt.toolchain.499846513/appendContributed=true
+environment/project/com.xmos.cdt.toolchain.87746209/XMOS_MODULE_PATH/delimiter=\:
+environment/project/com.xmos.cdt.toolchain.87746209/XMOS_MODULE_PATH/operation=append
+environment/project/com.xmos.cdt.toolchain.87746209/XMOS_MODULE_PATH/value=/home/andrew/bug_fixing/sc_lcd/app_lcd_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_benchmark\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_mfg_tests\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_regress\:/home/andrew/bug_fixing/sc_lcd/app_touch_controller_lib_demo\:/home/andrew/bug_fixing/sc_lcd/module_lcd\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram_memory_mapper\:/home/andrew/bug_fixing/sc_lcd/module_text_display\:/home/andrew/bug_fixing/sc_lcd/module_touch_controller_lib
+environment/project/com.xmos.cdt.toolchain.87746209/append=true
+environment/project/com.xmos.cdt.toolchain.87746209/appendContributed=true
+environment/project/com.xmos.cdt.toolchain.98824769/XMOS_MODULE_PATH/delimiter=\:
+environment/project/com.xmos.cdt.toolchain.98824769/XMOS_MODULE_PATH/operation=append
+environment/project/com.xmos.cdt.toolchain.98824769/XMOS_MODULE_PATH/value=/home/andrew/bug_fixing/sc_lcd/app_lcd_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_benchmark\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_mfg_tests\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_regress\:/home/andrew/bug_fixing/sc_lcd/app_touch_controller_lib_demo\:/home/andrew/bug_fixing/sc_lcd/module_lcd\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram_memory_mapper\:/home/andrew/bug_fixing/sc_lcd/module_text_display\:/home/andrew/bug_fixing/sc_lcd/module_touch_controller_lib
+environment/project/com.xmos.cdt.toolchain.98824769/append=true
+environment/project/com.xmos.cdt.toolchain.98824769/appendContributed=true
