--- a/app_can_osc/.settings/org.eclipse.cdt.core.prefs
+++ b/app_can_osc/.settings/org.eclipse.cdt.core.prefs
@@ -1,10 +1,20 @@
-#Wed Feb 06 13:52:56 GMT 2013
+#Mon Oct 21 14:18:17 BST 2013
 eclipse.preferences.version=1
 environment/project/com.xmos.cdt.toolchain.1033664486/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.1033664486/XMOS_MODULE_PATH/operation=append
 environment/project/com.xmos.cdt.toolchain.1033664486/XMOS_MODULE_PATH/value=
 environment/project/com.xmos.cdt.toolchain.1033664486/append=true
 environment/project/com.xmos.cdt.toolchain.1033664486/appendContributed=true
+environment/project/com.xmos.cdt.toolchain.78991069/XMOS_MODULE_PATH/delimiter=\:
+environment/project/com.xmos.cdt.toolchain.78991069/XMOS_MODULE_PATH/operation=append
+environment/project/com.xmos.cdt.toolchain.78991069/XMOS_MODULE_PATH/value=/home/andrew/bug_fixing/sc_lcd/app_lcd_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_benchmark\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_mfg_tests\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_regress\:/home/andrew/bug_fixing/sc_lcd/app_touch_controller_lib_demo\:/home/andrew/bug_fixing/sc_lcd/module_lcd\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram_memory_mapper\:/home/andrew/bug_fixing/sc_lcd/module_text_display\:/home/andrew/bug_fixing/sc_lcd/module_touch_controller_lib
+environment/project/com.xmos.cdt.toolchain.78991069/append=true
+environment/project/com.xmos.cdt.toolchain.78991069/appendContributed=true
+environment/project/com.xmos.cdt.toolchain.86223333/XMOS_MODULE_PATH/delimiter=\:
+environment/project/com.xmos.cdt.toolchain.86223333/XMOS_MODULE_PATH/operation=append
+environment/project/com.xmos.cdt.toolchain.86223333/XMOS_MODULE_PATH/value=/home/andrew/bug_fixing/sc_lcd/app_lcd_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_benchmark\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_mfg_tests\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_regress\:/home/andrew/bug_fixing/sc_lcd/app_touch_controller_lib_demo\:/home/andrew/bug_fixing/sc_lcd/module_lcd\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram_memory_mapper\:/home/andrew/bug_fixing/sc_lcd/module_text_display\:/home/andrew/bug_fixing/sc_lcd/module_touch_controller_lib
+environment/project/com.xmos.cdt.toolchain.86223333/append=true
+environment/project/com.xmos.cdt.toolchain.86223333/appendContributed=true
 environment/project/com.xmos.cdt.toolchain.878936138/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.878936138/XMOS_MODULE_PATH/operation=append
 environment/project/com.xmos.cdt.toolchain.878936138/XMOS_MODULE_PATH/value=
