--- a/module_can/.settings/org.eclipse.cdt.core.prefs
+++ b/module_can/.settings/org.eclipse.cdt.core.prefs
@@ -1,5 +1,10 @@
-#Thu Feb 07 14:50:23 GMT 2013
+#Mon Oct 21 14:18:13 BST 2013
 eclipse.preferences.version=1
+environment/project/com.xmos.cdt.toolchain.22618575/XMOS_MODULE_PATH/delimiter=\:
+environment/project/com.xmos.cdt.toolchain.22618575/XMOS_MODULE_PATH/operation=append
+environment/project/com.xmos.cdt.toolchain.22618575/XMOS_MODULE_PATH/value=/home/andrew/bug_fixing/sc_lcd/app_lcd_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_benchmark\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_demo\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_mfg_tests\:/home/andrew/bug_fixing/sc_sdram_burst/app_sdram_regress\:/home/andrew/bug_fixing/sc_lcd/app_touch_controller_lib_demo\:/home/andrew/bug_fixing/sc_lcd/module_lcd\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram\:/home/andrew/bug_fixing/sc_sdram_burst/module_sdram_memory_mapper\:/home/andrew/bug_fixing/sc_lcd/module_text_display\:/home/andrew/bug_fixing/sc_lcd/module_touch_controller_lib
+environment/project/com.xmos.cdt.toolchain.22618575/append=true
+environment/project/com.xmos.cdt.toolchain.22618575/appendContributed=true
 environment/project/com.xmos.cdt.toolchain.326425857/XMOS_MODULE_PATH/delimiter=\:
 environment/project/com.xmos.cdt.toolchain.326425857/XMOS_MODULE_PATH/operation=append
 environment/project/com.xmos.cdt.toolchain.326425857/XMOS_MODULE_PATH/value=
